initial Chart type template and the template itself, plus include
Former-commit-id: 2f7da2372057733cb3f806eae6ffdd85d4f4131f

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 <script src="web/js/HorizontalBarChart.js"></script>
 <script src="web/js/ReusableView.js"></script>
 <script src="web/js/Environment.js"></script>
+<script src="web/js/AddChartTypeView.js"></script>
 
 <script type="text/javascript" src="web/ChartCollection.js"></script>
 
