Add user preferences template, so that template is in its own file
Former-commit-id: d2286aaedc2f3465d64be1505130006ce46ad828

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <script src="web/js/Help.js"></script>
 <script src="web/js/AllPallets.js"></script>
 <script src="web/js/FileUpload.js"></script>
-<script src="web/js/UserPreferences.js"></script>
+<script src="web/js/UserPreferences.js?asd"></script>
 <script src="web/js/HorizontalBarChart.js"></script>
 <script src="web/js/ReusableView.js"></script>
 <script src="web/js/Environment.js"></script>
