extract the dimensions and normalize them and add them up in a data structure to construct the options lists from which we construct the select drop down
Former-commit-id: b3ab785473a42e6df5ca72f4ff6be7c39404c186

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <script src="web/js/HorizontalBarChart.js"></script>
 <script src="web/js/ReusableView.js"></script>
 <script src="web/js/Environment.js"></script>
-<script src="web/js/AddChartTypeView.js"></script>
+<script src="web/js/AddChartTypeView.js?asdf"></script>
 
 <script type="text/javascript" src="web/ChartCollection.js"></script>
 
