--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 <script src="web/js/chavez-spot.js"></script>
 <script src="web/js/BarChart.js?a"></script>
-<script src="web/js/ScatterChart.js"></script>
+<script src="web/js/ScatterPlot.js"></script>
 <script src="web/js/CompareArguments.js"></script>
 <script src="web/js/BubbleChart.js"></script>
 <script src="web/js/Utility.js"></script>
