--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <script src="web/js/HorizontalBarChart.js"></script>
 <script src="web/js/ReusableView.js"></script>
 <script src="web/js/Environment.js"></script>
-<script src="web/js/AddChartTypeView.js?asdf"></script>
+<script src="web/js/AddChartTypeView.js?as33df"></script>
 
 <script type="text/javascript" src="web/ChartCollection.js"></script>
 
