integrate the AddChartType to the actual persistance layer
Former-commit-id: 53afab4f93a83a1a36519a77dbd7e9d1aa09d5cb

--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
 <script src="web/js/HorizontalBarChart.js"></script>
 <script src="web/js/ReusableView.js"></script>
 <script src="web/js/Environment.js"></script>
-<script src="web/js/AddChartTypeView.js?as33df"></script>
+<script src="web/js/AddChartTypeView.js?x"></script>
+
 
 <script type="text/javascript" src="web/ChartCollection.js"></script>
 
