--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 <script src="web/js/ReusableView.js"></script>
 <script src="web/js/Environment.js"></script>
 <script src="web/js/AddChartTypeView.js?x"></script>
+<script src="web/js/EtcBucket.js"></script>
 
 
 <script type="text/javascript" src="web/ChartCollection.js"></script>
