initial localStorage implemenation for saving and restoring.
Former-commit-id: 7eaecbf9eecf5e7f8ea8bed5e736cf164e41bd49

--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
 <script src="web/js/Environment.js"></script>
 <script src="web/js/AddChartTypeView.js?x"></script>
 <script src="web/js/EtcBucket.js"></script>
+<script src="web/js/localStorage.js"></script>
 
 
 <script type="text/javascript" src="web/ChartCollection.js"></script>
