fixed walltime and added collapse-parent-nodes feature
Former-commit-id: 605bee81b78570f58eccf0f6774eb513b595dd30

--- a/sankey/index.html
+++ b/sankey/index.html
@@ -1,35 +1,1 @@
-<html>
-<head>
-    <title></title>
-</head>
-<body>
-
-    <main></main>
-    <script src="./localforage.js"></script>
-    <script src="./main.js"></script>
-    <script>
-        const params = new URLSearchParams(new URL(window.location).search)
-        const runSetId = params.get("runSetId")
-        const runId = params.get("runId")
-
-        localforage.getItem(runSetId)
-            .then(runSet => {
-                const fileData = runSet.Runs[runId]
-                for (const [key, val] of Object.entries(fileData.Globals)){
-                    const type_ = runSet.RunGlobalMeta[key] ? runSet.RunGlobalMeta[key].type : "string"
-                    fileData.Globals[key] = {value: fileData.Globals[key], type: type_ }
-                }
-
-                const flags = {filename: runId, data: fileData.Data, meta: fileData.Globals}
-                return Elm.Main.init(
-                    { node: document.querySelector('main')
-                    , flags
-                    }
-                )
-            })
-        document.title = runSetId + " / " + runId
-
-    </script>
-
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Walltime</title><link rel="stylesheet" href="walltime.630bafbb.css"></head><style>body,html{height:100%;width:100%;margin:0;padding:0}</style><body><main></main><script src="walltime.aca16c56.js"></script></body></html>
