Implement multiJupyter integration for AJAX without JSONP, to increase send limit to much greater
Former-commit-id: d12c526953a4dc8244b617559a218387f43a6e5e

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <script type="text/javascript" src="web/js/d3.js"></script>
 <script type="text/javascript" src="web/js/crossfilter.js"></script>
 <script type="text/javascript" src="web/js/dc.js"></script>
-<script type="text/javascript" src="compare.js"></script>
+<script type="text/javascript" src="compare.js?a=34"></script>
 
 <script src="web/js/Utility.js"></script>
 <script src="web/js/chavez-spot.js"></script>
