fix multijupyter for container
Former-commit-id: 08de1868d49357f057b652d6112051f394edfa5b

--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
 
 
 
+<script type="text/javascript" src="web/js/Environment.js"></script>
 <script type="text/javascript" src="web/js/d3.js"></script>
 <script type="text/javascript" src="web/js/crossfilter.js"></script>
 <script type="text/javascript" src="web/js/dc.js"></script>
 <script type="text/javascript" src="compare.js?a=34"></script>
 
 <script src="web/js/Utility.js"></script>
-<script src="web/js/chavez-spot.js"></script>
 <script src="web/js/BarChart.js?a"></script>
 <script src="web/js/ScatterPlot.js"></script>
 <script src="web/js/CompareArguments.js"></script>
@@ -121,7 +121,6 @@
 <script src="web/js/UserPreferences.js?asd"></script>
 <script src="web/js/HorizontalBarChart.js"></script>
 <script src="web/js/ReusableView.js"></script>
-<script src="web/js/Environment.js"></script>
 <script src="web/js/AddChartTypeView.js?x"></script>
 <script src="web/js/EtcBucket.js"></script>
 <script src="web/js/localStorage.js"></script>
