Spinner CSS implementation which will show a rotating cirle starting when you click on the multijupyter button and ending when the call comes back
Former-commit-id: 39bc1170c2a9172996c78b6701733d790adda1fb

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <div id="compare_bottom_outer"></div>
 
 <div id="tooltip"></div>
-
+<div class="spinner_loader"></div>
 
 
 <script type="text/javascript" src="web/js/Environment.js"></script>
