add memory button plus the punch out for it
Former-commit-id: 7e153fbd80aa15b2d133a27bbb06d5a94e629433

--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@
     <a href="https://image.flaticon.com/icons/png/512/59/59252.png" class="none_here">flaticons</a>
     <a href="https://img.icons8.com" class="none_here">icons8</a>
 
+    <br><br><br>
+    <div class="attributions">
+    <h4>Attributions</h4>
+        Icons made by <a href="https://www.flaticon.com/authors/google" title="Google">Google</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
+        Icons made by <a href="https://www.flaticon.com/authors/becris" title="Becris">Becris</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+        For Jupyter Planet icon: <a href="wpzoom.com">wpzoom.com</a>
+    </div>
 </div>
 
 <div id="compare_bottom_outer"></div>
