Implement lineChart and volume chart to show stub data but related the lineChart and volume to allow for zooming from one timescale to another
Former-commit-id: b6cbf77f71b9e9f15bd7fa883b499645c8ac6f58

--- a/memory/index.html
+++ b/memory/index.html
@@ -11,7 +11,8 @@
 <body>
 
 Memory linegraph page.
-
+<div id="memory-chart"></div>
+<div id="volume-chart"></div>
 
 <script src="../web/js/jquery-1.11.0.min.js"></script>
 <script src="../web/js/vue.js"></script>
@@ -20,6 +21,7 @@ Memory linegraph page.
 <script type="text/javascript" src="../web/js/d3.js"></script>
 <script type="text/javascript" src="../web/js/crossfilter.js"></script>
 <script type="text/javascript" src="../web/js/dc.js"></script>
+<script type="text/javascript" src="js/MemoryLineView.js"></script>
 
 </body>
 </html>
