--- a/memory/index.html
+++ b/memory/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
 
     <link rel="stylesheet" type="text/css" href="../web/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="../web/style/memory.css"/>
+    <link rel="stylesheet" type="text/css" href="css/memory.css"/>
 
 </head>
 <body>
