initial memory call ajax call to retrieve the memory data stub, plus the finish render callback.  setup infrastructure
Former-commit-id: 9608542de86cdc3c83b97ba9c6da639ceb9bc9c7

--- a/memory/index.html
+++ b/memory/index.html
@@ -23,6 +23,8 @@ Memory linegraph page.
 <script type="text/javascript" src="../web/js/dc.js"></script>
 
 
+<script type="text/javascript" src="../web/js/Utility.js"></script>
+<script type="text/javascript" src="../web/js/CallSpot.js"></script>
 <script type="text/javascript" src="js/MemoryLineView.js"></script>
 
 
