get trace for 3 versions of the data based on the attribute of mem, all ow which are plotted on the xaxis
Former-commit-id: 00cbace857f28305f1dc798254dfb59d5bd7ec0f

--- a/memory/index.html
+++ b/memory/index.html
@@ -12,6 +12,8 @@
 
 Memory linegraph page.
 <div id="myDiv"></div>
+<div id="myDiv2"></div>
+<div id="myDiv3"></div>
 
 <div id="memory-chart"></div>
 <div id="volume-chart"></div>
