--- a/web/doc.html
+++ b/web/doc.html
@@ -70,6 +70,7 @@
         <tr>
             <td>
                 Plus Button
+                <img src="../web/img/docs/plus.png"/>
             </td>
             <td>
                 Use this to add a new chart to your dashboard.  Currently, we support ScatterCharts.
@@ -78,6 +79,7 @@
         <tr>
             <td>
                 Checkboxes
+                <img src="../web/img/docs/check.png"/>
             </td>
             <td>
                 You may show or hide charts using the checkboxes.  First click the checkbox icon at the top right.  That will open the checkbox drawer.  Then check or uncheck to show or hide charts.
@@ -94,6 +96,7 @@
         <tr>
             <td>
                 Jupyter Icon
+                <img src="../web/img/docs/jup.png"/>
             </td>
             <td>
                 At the bottom, in the table section which shows run data, you'll see up to 3 buttons per row.
@@ -104,6 +107,7 @@
         <tr>
             <td>
                 Durations Icon
+                <img src="../web/img/docs/dur.png"/>
             </td>
             <td>
                 The durations icon will show you the walltime for a given run.
@@ -113,6 +117,7 @@
         <tr>
             <td>
                 Memory Icon
+                <img src="../web/img/docs/memory.png"/>
             </td>
             <td>
                 This will open up a new window showing memory usage details.
@@ -122,6 +127,7 @@
         <tr>
             <td>
                 MultiJupyter Icon
+                <img src="../web/img/docs/multi.png"/>
             </td>
             <td>
                 This opens a new jupyter notebook with all your runs amalgamated.
@@ -350,7 +356,7 @@
     <h2>last_days</h2>
     <p>This is a URL parameter which lets you specify the last X number of days.  This was designed to be used in conjunction with exe_compare which will then execute the compare right away.</p>
 
-    
+
 
     <h2>Getting Started</h2>
     <p>
