add jupyter, durations and walltime explanations
Former-commit-id: 16d7ea150c1fd8eef7a23b6a6d65487092eddbf8

--- a/web/doc.html
+++ b/web/doc.html
@@ -9,6 +9,8 @@
             margin: 0;
             padding: 0;
             font-family: Tahoma;
+            line-height: 1.5;
+            color: #222;
         }
         .out_inner {
             margin: 0 auto;
@@ -52,6 +54,10 @@
         .doc_table img {
             width: 38px;
         }
+
+        p {
+            padding: 9px 0 9px 0;
+        }
     </style>
 
     <link rel="stylesheet" type="text/css" href="../web/css/dc.css">
@@ -78,7 +84,14 @@
         From the Run table entry, you will have up to 3 buttons on the right: A juputer notebook, a durations page and a memory line graph page (currently in development).
     </p>
 
+    <h3>Jupyter Notebooks</h3>
+    <p>Clicking on the jupyter icon for a run, will open a new page showing a jupyter notebook.</p>
 
+    <h3>Durations</h3>
+    <p>Clicking on the durations icon for a run, will open the walltimes page.</p>
+
+    <h3>Memory Line Graph</h3>
+    <p>Click on the line graph icon for a run, will open the memory line graph page.</p>
 
 
     <h3>Chart Types</h3>
