Initial implementation of Multi charts: including the ability to go from scatter chart to multi chart, and the initial jquery plugin implementation of MultiRowSelector with an Add row button.
Former-commit-id: 36a3dc80ee406b16cb9d2181b50b023a3560cf3f

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 <script type="text/javascript" src="web/js/crossfilter.js"></script>
 <script type="text/javascript" src="web/js/dc.js"></script>
 <script type="text/javascript" src="compare.js?a=34"></script>
+<script type="text/javascript" src="web/js/MultiRowSelector.jquery.js"></script>
 
 <script src="web/js/Utility.js"></script>
 <script src="web/js/BarChart.js?a"></script>
