Use Davids new timerseries data based on actual data coming from the SQL call returned from the server and display 5 different sets of values using block as the xaxis.
Former-commit-id: 4cb8306ad60e14a8bf4408492234a4f35423f941

--- a/memory/index.html
+++ b/memory/index.html
@@ -14,6 +14,8 @@ Memory linegraph page.
 <div id="myDiv"></div>
 <div id="myDiv2"></div>
 <div id="myDiv3"></div>
+<div id="myDiv4"></div>
+<div id="myDiv5"></div>
 
 <div id="memory-chart"></div>
 <div id="volume-chart"></div>
