add styling for the Checkboxwindow manager to show it and be able to render the various checkboxes and dropdowns
Former-commit-id: 2b909102cd16c176bcedd088d8888047c60112bb

--- a/memory/index.html
+++ b/memory/index.html
@@ -6,10 +6,12 @@
 
     <link rel="stylesheet" type="text/css" href="../web/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/memory.css"/>
+    <link rel="stylesheet" type="text/css" href="css/CheckboxWindowManager.css"/>
 
 </head>
 <body>
 
+<div class="ch_dropdown"></div>
 Memory linegraph page.
 <div id="myDiv"></div>
 <div id="myDiv2"></div>
@@ -34,6 +36,7 @@ Memory linegraph page.
 <script type="text/javascript" src="../web/js/Utility.js"></script>
 <script type="text/javascript" src="../web/js/CallSpot.js"></script>
 <script type="text/javascript" src="js/MemoryLineView.js"></script>
+<script type="text/javascript" src="js/CheckboxWindowManager.jquery.js"></script>
 
 
 </body>
