--- a/memory/index.html
+++ b/memory/index.html
@@ -11,6 +11,8 @@
 </head>
 <body>
 
+<div class="chart_container"></div>
+
 <div class="ch_dropdown"></div>
 Memory linegraph page.
 <div id="myDiv"></div>
