initial button implementation for the multi chart support
Former-commit-id: 6792d7ee94e0ce90b267674dfb327af0201aaabb

--- a/memory/index.html
+++ b/memory/index.html
@@ -4,12 +4,17 @@
     <title>SPOT 2</title>
     <meta charset="UTF-8">
 
+    <link rel="stylesheet" type="text/css" href="../web/css/dc.css">
     <link rel="stylesheet" type="text/css" href="../web/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/memory.css"/>
     <link rel="stylesheet" type="text/css" href="css/CheckboxWindowManager.css"/>
 
 </head>
 <body>
+
+<div title="Plus button" class="myButton plus icon">
+    <div class="inner">+</div>
+</div>
 
 <div class="chart_container"></div>
 
