style button and move it to the top right
Former-commit-id: ea186e5e9f6175617e2920df69cdb8f7e83ac12c

--- a/memory/index.html
+++ b/memory/index.html
@@ -12,6 +12,8 @@
 </head>
 <body>
 
+<div class="top_bar"></div>
+
 <div title="Plus button" class="myButton plus icon">
     <div class="inner">+</div>
 </div>
