--- a/sankey/index.html
+++ b/sankey/index.html
@@ -1,1 +1,6 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Walltime</title><link rel="stylesheet" href="walltime.41f1f873.css"></head><style>body,html{height:100%;width:100%;margin:0;padding:0}</style><body><main></main><script src="walltime.3c03903f.js"></script></body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Walltime</title><link rel="stylesheet" href="walltime.65c730e5.css"></head><style>html, body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}</style><body><main></main><script src="walltime.65c730e5.js"></script></body></html>
