add Memory line model to be included.
Former-commit-id: 7450e5f29309a0f1ef105e60dd8b157a18dead54

--- a/memory/index.html
+++ b/memory/index.html
@@ -38,6 +38,7 @@
 <script type="text/javascript" src="../web/js/Utility.js"></script>
 <script type="text/javascript" src="../web/js/CallSpot.js"></script>
 <script type="text/javascript" src="js/MemoryLineView.js"></script>
+<script type="text/javascript" src="js/MemoryLineModel.js"></script>
 <script type="text/javascript" src="js/CheckboxWindowManager.jquery.js"></script>
 
 
