--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
 <script src="web/js/AddChartTypeView.js?x"></script>
 <script src="web/js/EtcBucket.js"></script>
 <script src="web/js/localStorage.js"></script>
+<script src="web/js/CompositeLayoutModel.js"></script>
 
 
 <script type="text/javascript" src="web/ChartCollection.js"></script>
