Initial Validate composite model implementation for validation handling
Former-commit-id: 434a5d01966b6d65a1e1e9ef9315be3b59e4f5ca

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
 <script src="web/js/EtcBucket.js"></script>
 <script src="web/js/localStorage.js"></script>
 <script src="web/js/CompositeLayoutModel.js"></script>
+<script src="web/js/ValidateCompositeModel.js"></script>
 
 
 <script type="text/javascript" src="web/ChartCollection.js"></script>
