--- a/memory/index.html
+++ b/memory/index.html
@@ -39,6 +39,7 @@
 <script type="text/javascript" src="js/MemoryLineView.js"></script>
 <script type="text/javascript" src="js/MemoryLineModel.js"></script>
 <script type="text/javascript" src="js/CheckboxWindowManager.jquery.js"></script>
+<script type="text/javascript" src="js/TitleModel.js"></script>
 
 
 </body>
