--- a/memory/index.html
+++ b/memory/index.html
@@ -14,7 +14,7 @@
 
 <div class="top_bar"></div>
 
-<div title="Plus button" class="myButton plus icon">
+<div title="Add Plot" class="myButton plus icon">
     <div class="inner">+</div>
 </div>
 
