--- a/memory/index.html
+++ b/memory/index.html
@@ -34,6 +34,7 @@
 
 
 <script type="text/javascript" src="js/plotly-latest.min.js"></script>
+<script type="text/javascript" src="../web/js/Environment.js"></script>
 <script type="text/javascript" src="../web/js/Utility.js"></script>
 <script type="text/javascript" src="../web/js/CallSpot.js"></script>
 <script type="text/javascript" src="js/MemoryLineView.js"></script>
