Add icon and allow jupyter connection info to come from BE
Former-commit-id: d5eeeb9aa207859012448284b65091ee34751e44

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" href="web/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="web/css/dc.css"/>
-    <link rel="icon" type="image/x-icon" href="web/dc.logo.png"/>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
 
     <style>
         #monthly-volume-chart g.y {
