--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 <script src="web/js/localStorage.js"></script>
 <script src="web/js/CompositeLayoutModel.js"></script>
 <script src="web/js/ValidateCompositeModel.js"></script>
-
+<script src="web/js/RunDictionaryTranslator.js"></script>
 
 <script type="text/javascript" src="web/ChartCollection.js"></script>
 
