--- a/sankey/index.html
+++ b/sankey/index.html
@@ -1,6 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Walltime</title><link rel="stylesheet" href="walltime.65c730e5.css"></head><style>html, body {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-}</style><body><main></main><script src="walltime.65c730e5.js"></script></body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Walltime</title><link rel="stylesheet" href="walltime.34160d8c.css"></head><style>body,html{height:100%;width:100%;margin:0;padding:0}</style><body><main></main><script src="walltime.5d1b2e53.js"></script></body></html>
