--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
 <script src="web/js/CompositeLayoutModel.js"></script>
 <script src="web/js/ValidateCompositeModel.js"></script>
 <script src="web/js/RunDictionaryTranslator.js"></script>
+<script src="web/js/RunsMeter.js"></script>
 
 <script type="text/javascript" src="web/ChartCollection.js"></script>
 
