localStorage work needed to be able to store a small store of value for things like pipe.  but still within localstorage 5MB limit.

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 <script src="web/js/ValidateCompositeModel.js"></script>
 <script src="web/js/RunDictionaryTranslator.js"></script>
 <script src="web/js/RunsMeter.js"></script>
+<script src="web/js/DBStorage.js"></script>
 
 <script type="text/javascript" src="web/ChartCollection.js"></script>
 
