implementt the usage of the new DBStorage which allows the main page to load

--- a/sankey/index.html
+++ b/sankey/index.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Walltime</title><link rel="stylesheet" href="walltime.65c730e5.css"></head><style>html, body {
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Walltime</title><link rel="stylesheet" href="walltime.65c730e5.css"></head><style>html,
+body {
     height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
-}</style><body><main></main><script src="walltime.65c730e5.js"></script></body></html>
+}</style><body><main></main><script src="DBStorage.77a00b2c.js?a=3"></script><script src="walltime.65c730e5.js"></script></body></html>
