Refactor CustomTemplates into its own module for better matinainability.

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 <script src="web/js/BubbleChart.js"></script>
 <script src="web/js/PieChart.js"></script>
 <script src="web/js/BasicLineChart.js"></script>
+<script src="web/js/CustomTemplates.js"></script>
 <script src="web/js/LineChart.js"></script>
 <script src="web/js/LeftHorizontalBarChart.js"></script>
 <script src="web/js/CallSpot.js?afd3ff"></script>
