--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
 <script src="web/js/RunDictionaryTranslator.js"></script>
 <script src="web/js/RunsMeter.js"></script>
 <script src="web/js/DBStorage.js"></script>
+<script src="web/js/LZstring.min.js"></script>
 
 <script type="text/javascript" src="web/ChartCollection.js"></script>
 
