implement input field of text changing to select drop down and drop down to select input for the const unary operator, when unary operator selector is changed.

--- a/index.html
+++ b/index.html
@@ -144,5 +144,7 @@
 
 <script type="text/javascript" src="web/ChartCollection.js"></script>
 
+<canvas id="myCanvas" width="500" height="500"></canvas>
+
 </body>
 </html>
