use node module paths for libraries

--- a/index.html
+++ b/index.html
@@ -105,9 +105,14 @@
 </div>
 
 <script type="text/javascript" src="web/js/Environment.js"></script>
-<script type="text/javascript" src="web/js/d3.js"></script>
+<!--<script type="text/javascript" src="web/js/d3.js"></script>
 <script type="text/javascript" src="web/js/crossfilter.js?a=22"></script>
-<script type="text/javascript" src="web/js/dc.js"></script>
+<script type="text/javascript" src="web/js/dc.js"></script>-->
+<script type="text/javascript" src="node_modules/d3/dist/d3.min.js"></script>
+<script type="text/javascript" src="node_modules/crossfilter2/crossfilter.min.js"></script>
+<script type="text/javascript" src="node_modules/dc/dist/dc.min.js"></script>
+
+
 <script type="text/javascript" src="compare.js?a=33934"></script>
 <script type="text/javascript" src="web/js/MultiRowSelector.jquery.js"></script>
 
