use new js libraries

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 </head>
 <body>
 
-<script src="web/js/jquery-1.11.0.min.js"></script>
-<script src="web/js/vue.js"></script>
+<script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript" src="node_modules/vue/dist/vue.cjs.prod.js"></script>
+
 <script src="web/js/run-table-component.js"></script>
 
 
@@ -105,12 +106,10 @@
 </div>
 
 <script type="text/javascript" src="web/js/Environment.js"></script>
-<script type="text/javascript" src="web/js/d3.js"></script>
-<script type="text/javascript" src="web/js/crossfilter.js?a=22"></script>
-<script type="text/javascript" src="web/js/dc.js"></script>
-<!--<script type="text/javascript" src="node_modules/d3/dist/d3.min.js"></script>
+
+<script type="text/javascript" src="node_modules/d3/dist/d3.min.js"></script>
 <script type="text/javascript" src="node_modules/crossfilter2/crossfilter.min.js"></script>
-<script type="text/javascript" src="node_modules/dc/dist/dc.min.js"></script>-->
+<script type="text/javascript" src="node_modules/dc/dist/dc.min.js"></script>
 
 
 <script type="text/javascript" src="compare.js?a=33934"></script>
