--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
 <body>
 
 <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
-<script type="text/javascript" src="node_modules/vue/dist/vue.cjs.prod.js"></script>
-
-<script src="web/js/run-table-component.js"></script>
+<script type="text/javascript" src="node_modules/vue/dist/vue.global.js"></script>
+<!--<script type="text/javascript" src="web/js/vue.js"></script>-->
 
 
 <div class="container" id="app">
@@ -130,9 +129,9 @@
 <script src="web/js/ReturnedDataStub.js"></script>
 <script src="web/js/UrlStateManager.js"></script>
 <script src="web/js/MakeNiceData.js"></script>
-<script src="web/js/Help.js"></script>
 <script src="web/js/AllPallets.js"></script>
 <script src="web/js/FileUpload.js"></script>
+<script src="web/js/Help.js"></script>
 <script src="web/js/UserPreferences.js?asd"></script>
 <script src="web/js/HorizontalBarChart.js"></script>
 <script src="web/js/ReusableView.js"></script>
