--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
                 </div>
             </div>
 
-            <bottom-tabs id="bottom-tabs"></bottom-tabs>
+            <div id="bottom-tabs">
+                <bottom-tabs></bottom-tabs>
+            </div>
 
             <div class="table-outer">
 
